--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Oleksandr Khotemskyi
 
 # Short bio or description (displayed in the header)
-description: Oleksandr Khotemskyi, Software Development Engineer in Test
+description: Software Development Engineer in Test
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/Xotabu4/xotabu4.github.io/master/images/avatar.jpg
